@@ -1,2 +1,2 @@
 DIST linphone-3.8.1.tar.gz 15327283 SHA256 8d45bc9ec9a795a29bfdbf60c665bdfa81b46f3c83e870d50ad7c3f25156bca7 SHA512 f9f0b9549961485988efa963b3eba7f2c9a96ea4b0b0d5e206a944479ac9171f25f56183874c281f885a691e96843bd0cec361826b15c2fa20d61f533c6c9712 WHIRLPOOL 846e1bc8ff89ebe9a27e9567c94b31c20f767e4b29af3a4ed42858b82c55c43eb613016fd706ecf93d0afaa3c15e26c2076fa56127fa07ecf233bb805875c205
-DIST linphone-3.8.2.tar.gz 15281795 SHA256 6aafaa6a557041a5b52904f3a91a7ed789202e3050123cd7bdd35d7d1221db4d SHA512 9b08765c01fb7f056dbe6b6ef8daec7d768b0abfbcd618d90af4d9edd3272894459c730386fab223e99790db73abeed8f59e376633a3724fb39cf4d5b7d858f4 WHIRLPOOL 73879f7b9fa3ba2b4f5fe6b878f53fc36411f38202b11b9708f7da461efd05ce594ec7e66758faea7a193869d04f79849a27095304a0f5bd639423bf1d22ef04
+DIST linphone-3.8.3.tar.gz 9583225 SHA256 ed80f5442f9c84bdc9b97b92c0b09ceeb7cb15a9c2cee17509c79d15924326a2 SHA512 493cb324d776ff5d8811ae216f5aba4dd7aa40e50a2912ee249e187967c1ea11e72120563bc4591181505f4c2e4b3b230fbc2365bd9b59b6db2c5e59931c9493 WHIRLPOOL 7ad36d002ae614717d8c35c7247f33f07302a08b7fe8c7dfb20798a5454cd52913f6391b9f752fd77f0911897e6de3a6c817eb132ee251313931a235898a4198
