@@ -1,3 +1,9 @@
+*linphone-3.8.3 (07 Jun 2015)
+
+  07 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com>
+  +linphone-3.8.3.ebuild, -linphone-3.8.2.ebuild:
+  net-voip/linphone: version bump
+
 *linphone-3.8.2 (11 May 2015)
 
   11 May 2015; Guillaume Horel <guillaume.horel@gmail.com>
